--- a/Simple_Map/index.html
+++ b/Simple_Map/index.html
@@ -22,6 +22,7 @@ integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUT
    <!-- API key -->
 <script type="text/javascript" src="./static/js/config.js"></script>
 <!-- Our JavaScript -->
+<script type="text/javascript" src="./static/js/cities.js"></script>
 <script type="text/javascript" src="./static/js/logic.js"></script>
 
 </body>
