--- a/Simple_Map/index.html
+++ b/Simple_Map/index.html
@@ -8,6 +8,10 @@
      <!-- Leaflet CSS -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
 crossorigin=""/>
+
+<!-- d3 JavaScript -->
+<script src="https://d3js.org/d3.v5.min.js"></script>
+
 <!-- Our CSS -->
 <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
@@ -22,7 +26,6 @@ integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUT
    <!-- API key -->
 <script type="text/javascript" src="./static/js/config.js"></script>
 <!-- Our JavaScript -->
-<script type="text/javascript" src="./static/js/cities.js"></script>
 <script type="text/javascript" src="./static/js/logic.js"></script>
 
 </body>
